# sfr-reader

./: Makefile  autoclean.sh  autogen.sh  configure.ac  dump.c  index.html  sfr.h
src/: Makefile.am  dump.c  misc.c  misc.h  revert.c  revert.h  sfr.h  sfr2txt.c  sfr2txt.h
